# 3d-example

./: CMakeLists.txt  Makefile  README.md
include/: glad.h
src/: main.cpp
